<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My First App (now with IntelliJ)</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_clear">Clear</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_display_search">DisplaySearchActivity</string>
    <string name="title_activity_display_settings">DisplaySettingsActivity</string>
    <string name="vertical_view">Vertical View</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="title_activity_article_fragment">ArticleFragment</string>
    <string name="large_button_title">Large</string>
    <string name="small_button_title">Small</string>
    <string name="large_button_label">Large Button Label</string>
    <string name="title_activity_display_search_small_button">DisplaySearchSmallButtonActivity</string>
    <string name="small_button_label">Small Button Label</string>
    <string name="new_button_label">Clock</string>
    <string name="new_check_box">Check This Out</string>
    <string name="textInputHint">Input some text</string>
    <string name="emailInputHint">Input an email address</string>
    <string name="topButtonLabel">TOP</string>
    <string name="bottomButtonLabel">BOTTOM</string>
    <string name="secondMessageHint">Type something here</string>
    <string name="postalAddressHint">Type a postal address here</string>
    <string name="autoCompleteHint">This will auto-complete</string>
    <string name="title_activity_top">T - O - P</string>
    <string name="title_activity_bottom">b_o_t_t_o_m</string>
    <string name="goShowButtonTitle">"-G:O- "</string>
    <string name="title_activity_goshow">Go - Show</string>

</resources>
