<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplaySearchActivity" >

    <TextView
        android:id="@+id/topTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/buttonTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:onClick="largeSearch"
        android:text="@string/large_button_title" />

    <Button
        android:id="@+id/buttonBottom"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonTop"
        android:layout_alignBottom="@+id/buttonTop"
        android:layout_alignLeft="@+id/topTextView"
        android:layout_marginLeft="58dp"
        android:onClick="smallSearch"
        android:text="@string/small_button_title" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonTop"
        android:layout_below="@+id/buttonBottom"
        android:layout_marginTop="55dp"
        android:onClick="newButton"
        android:text="@string/new_button_label" />

    <CheckBox
        android:id="@+id/checkThisOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignLeft="@+id/topTextView"
        android:text="@string/new_check_box" />

    <EditText
        android:id="@+id/second_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/textInputHint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/second_message"
        android:layout_below="@+id/second_message"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/emailInputHint"
        android:inputType="textEmailAddress" />

</RelativeLayout>