<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/outer1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_message"
            style="@style/CodeFont"
            android:layout_weight="1"
            android:hint="@string/edit_message" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:id="@+id/inner1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sendMessage"
                android:text="@string/button_send" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sendClear"
                android:text="@string/button_clear" />
        </LinearLayout>

        <EditText
            android:id="@+id/second_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/secondMessageHint" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pressTop"
                android:text="@string/topButtonLabel" />

            <Button
                android:id="@+id/buttonBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pressBottom"
                android:text="@string/bottomButtonLabel" />

            <EditText
                android:id="@+id/editPostalAddress"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:hint="@string/postalAddressHint"
                android:inputType="textPostalAddress" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/autoCompleteHint" />

            <RadioGroup
                android:id="@+id/radioGrp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/choice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RadioButton  1" />

                <RadioButton
                    android:id="@+id/choice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RadioButton  2" />
            </RadioGroup>

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>